<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cline.turfugame.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose your challenge"
        android:id="@+id/textView3"
        android:textColor="@color/colorText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textSize="30dp"/>

    <Button android:id="@+id/button5"
        android:background="@color/colorButton"
        android:textColor="@android:color/white"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button android:id="@+id/button4"
        android:background="@color/colorButton"
        android:textColor="@android:color/white"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="And tap to Play"
        android:id="@+id/textView4"
        android:textColor="@color/colorText"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"/>

    <Button android:id="@+id/button3"
        android:background="@color/colorButton"
        android:textColor="@android:color/white"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
